Added functionality to grab recipe title, image, ingredients, and instructions using API once a recipe card is clicked

--- a/styles.css
+++ b/styles.css
@@ -80,6 +80,7 @@ form input[type="submit"]:hover {
   display: grid;
   grid-template-columns: auto;
   text-align: center;
+  cursor: pointer;
 }
 
 .item:hover {
