--- a/styles.css
+++ b/styles.css
@@ -29,6 +29,9 @@ form input{
   font-size: 24px;
   border-radius: 20px;
 }
+form input[type="button"] {
+  margin: 10px 10px;
+}
 form input[type="text"] {
   border: 4px solid lightseagreen;
 }
