--- a/styles.css
+++ b/styles.css
@@ -109,7 +109,7 @@ form input[type="submit"]:hover, form input[type="button"]:hover {
 
 .img {
   width: 100%;
-  height: auto;
+  height: 100%;
   aspect-ratio: 16/9;
   object-fit: cover;
   border-bottom-left-radius: 17px;
@@ -172,5 +172,9 @@ form input[type="submit"]:hover, form input[type="button"]:hover {
 
   .container {
     grid-template-columns: auto;
+  }
+
+  .img {
+    height: auto;
   }
 }
