Fixed issue with image display in mobile Safari

--- a/styles.css
+++ b/styles.css
@@ -173,4 +173,8 @@ form input[type="submit"]:hover, form input[type="button"]:hover {
   .container {
     grid-template-columns: auto;
   }
+
+  .img {
+    height: auto;
+  }
 }
