--- a/styles.css
+++ b/styles.css
@@ -79,7 +79,7 @@ form input[type="submit"]:hover, form input[type="button"]:hover {
 }
 .images li img{
   max-width: 100%;
-  height: auto;
+  height: 100%;
 }
 
 .container {
@@ -174,7 +174,7 @@ form input[type="submit"]:hover, form input[type="button"]:hover {
     grid-template-columns: auto;
   }
 
-  .img {
+  .img, .images li img {
     height: auto;
   }
 }
